fix: add utility for no-scrollbar styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,10 @@
   --ui-radius: 0.25rem;
 }
 
+@utility no-scrollbar {
+  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
